Fix SitePerProcessHitTestDataGenerationTest in BGPT

BlinkGenPropertyTrees changes the visible layer rect computed by cc due
to minor differences of clip tree. This does not affect hit testing
correctness as BGPT removes a viewport level clip node and make visible
layer rect slightly bigger.

However this does break two SitePerProcessHitTestDataGenerationTest as
we compare visible layer rect with exact precomputed value. This patch
fixes the failure.

One of the failed test indicate that we do not correctly detect if an
OOPIF has mask (border-radius or clip-path), so the patch also fixes it
by referring to effect tree.

It's worth mentioning that because of dependency rules of the directory
content/browser, we cannot include blink feature header in the test, so
we compare the hit test region with both BGPT value and non-BGPT value.

Bug: 922698
Change-Id: I1c868ea11731b895b105938e527f5d2786f2ce34
Reviewed-on: https://chromium-review.googlesource.com/c/1431477
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianda Sun <sunxd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#627225}
Former-commit-id: db25926d76eac76ca3535d3dca18b58e61a764d9