cc/trees/effect_node.h
@@ -73,6 +73,9 @@ struct CC_EXPORT EffectNode {
   bool is_currently_animating_opacity : 1;
   // Whether this node has a child node with kDstIn blend mode.
   bool has_masking_child : 1;
+  // Whether this node has an ancestor with a mask layer or the node itself has
+  // a mask.
+  bool is_masked : 1;
   // Whether this node's effect has been changed since the last
   // frame. Needed in order to compute damage rect.
   bool effect_changed : 1;
